# distroy

./: .gitignore  CMakeLists.txt  Makefile  README.md  module.json  release.json
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: distroy_dsp.h
scripts/: build.sh  install.sh  package.sh
src/: audio_fx_api_v2.h  distroy_audio_fx.c  distroy_dsp.c  distroy_dsp.h
test/: test_dsp.c
